feat(java 19): use structured concurrency